# prank-app

./: .gitignore  README.md  package-lock.json  package.json
releases/: jumpscare_0.1.0_x64_en-US.msi
src/: index.html  main.js  popup.html  popup2.html  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
