[package]
name = "jumpscare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jumpscare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    "wry"
] }
tauri-plugin-opener = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["time"] }
mouse-rs = "0.4"
display-info = "0.5.4"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse"
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
